[package]
name = "rust-whoami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive"]}
anyhow = "1.0.75"
nix = {version = "0.27.1", features = ["user"]}
libc = "0.2.147"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
assert_fs = "1.0.13"